# ComfyUI-Ultimat_WanVace_Upscale

./: README.md  nodes.py  pyproject.toml  requirements.txt
nag/: compatibility.py  moe_sampler.py  samplers.py
nag/wan/: model.py
nag/wan22/: attention.py  config.py  model.py  router.py
workflows/: LongVideo.json  LongVideoGen.json  LongVideoWithRefineInit.json  advanced.json  simple.json  tile_control_and_regional_prompt.json
